// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAreaCell component TextAreaCell handles changes 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container"
            >
              <textarea
                autocomplete="off"
                autocorrect="off"
                class="textarea"
                data-testid="DATA-TEST-ID"
                id="data"
                name="data"
              >
                text
              </textarea>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextAreaCell component TextAreaCell handles changes 2`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container"
            >
              <textarea
                autocomplete="off"
                autocorrect="off"
                class="textarea"
                data-testid="DATA-TEST-ID"
                id="data"
                name="data"
              >
                text
              </textarea>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextAreaCell component TextAreaCell renders 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container"
            >
              <textarea
                autocomplete="off"
                autocorrect="off"
                class="textarea readOnly"
                id="data"
                name="data"
                readonly=""
              >
                text 1
              </textarea>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextAreaCell component TextAreaCell renders cell editing with no row input 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container"
            >
              <textarea
                autocomplete="off"
                autocorrect="off"
                class="textarea"
                id="data"
                name="data"
              />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextAreaCell component TextAreaCell renders hidden 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
          style="display: none;"
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container"
            >
              <textarea
                autocomplete="off"
                autocorrect="off"
                class="textarea readOnly"
                id="data"
                name="data"
                readonly=""
              >
                text 1
              </textarea>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextAreaCell component TextAreaCell renders row editing with no row input 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container"
            >
              <textarea
                autocomplete="off"
                autocorrect="off"
                class="textarea"
                id="data"
                name="data"
              />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextAreaCell component TextAreaCell renders with forced value 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container"
            >
              <textarea
                autocomplete="off"
                autocorrect="off"
                class="textarea readOnly"
                id="data"
                name="data"
                readonly=""
              >
                text 2
              </textarea>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
